--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #8f8f8f !important;
+  z-index: 10;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #ffffff !important;
+}
